# gr00t-moe-jax

./: PLAN.md  README.md  pyproject.toml
src/gr00t_moe_jax/models/: __init__.py  action_head.py  dit.py  qwen3.py
src/gr00t_moe_jax/modules/: __init__.py  action_encoder.py  adalayernorm.py  attention.py  category_specific.py  feedforward.py  positional.py  qwen3_attention.py  qwen3_mlp.py  rmsnorm.py  rope.py  timestep.py  transformer_block.py
src/gr00t_moe_jax/weights/: __init__.py  converter.py
tests/: test_weight_converter.py
tests/models/: test_action_head.py  test_action_head_horizon.py  test_dit.py  test_qwen3.py
tests/modules/: test_action_encoder.py  test_adalayernorm.py  test_attention.py  test_category_specific.py  test_feedforward.py  test_positional.py  test_qwen3_attention.py  test_qwen3_mlp.py  test_rmsnorm.py  test_rope.py  test_timestep.py  test_transformer_block.py
tests/parity/: conftest.py  test_action_encoder_parity.py  test_action_head_parity.py  test_adalayernorm_parity.py  test_all_masked_softmax.py  test_attention_parity.py  test_category_specific_parity.py  test_dit_parity.py  test_feedforward_parity.py  test_qwen3_attention_parity.py  test_qwen3_mlp_parity.py  test_qwen3_parity.py  test_rmsnorm_parity.py  test_rope_parity.py  test_timestep_encoder_parity.py  test_transformer_block_parity.py
